--- a/Web/Lugares.html
+++ b/Web/Lugares.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="JS/ScriptIMG.js">defer</script>
+    <script src="JS/ScriptIMG.js"defer></script>
 </head>
 <body>
     <h1> 5 Lugares Mais Bonitos </h1>
@@ -35,8 +35,7 @@
         Além disso, o local tem como foco a preservação ambiental, por isso os viajantes devem pagar uma taxa ambiental, seguindo as regras estabelecidas durante a estadia.
      </p>  
      <h2>5.Lago Tekapo – Nova Zelândia</h2>
-    <img src="image/Lugar5.png" width="510" height="420"></a>id="sem-texto"
-     <p5>
-     </p5>  
+    <img src="image/Lugar5.png" width="510" height="420" ID="texto">
+     
 </body>
 </html>
