--- a/Web/Taboada.html
+++ b/Web/Taboada.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Gerador de Tabuada</h1>
+        <h1>Gustavo Taquiwi Ariosi</h1>
+        <h2>Gerador de Taboada</h2>
         <form id="tabuadaForm">
             <label for="numero">Digite um número inteiro:</label>
             <input type="number" id="numero" name="numero" required>
