--- a/Html/caramelo_responde/resposta_Dog.html
+++ b/Html/caramelo_responde/resposta_Dog.html
@@ -19,7 +19,7 @@
         <h1>Latido Traduzido do Dog</h1>
 
         <div class="banner">
-            <img src="/Html/caramelo_responde/imagens/banner.webp" alt="">
+            <img src="imagens/banner.webp" alt="">
         </div>
 
     </header>
