--- a/Html/caramelo_responde/index.html
+++ b/Html/caramelo_responde/index.html
@@ -19,7 +19,7 @@
         <h1>Bem-vindo ao Caramelo Responde!</h1>
 
         <div class="banner">
-            <img src="/Html/caramelo_responde/imagens/banner.webp" alt="">
+            <img src="imagens/banner.webp" alt="">
         </div>
 
     </header>
